...

	// MARK: - Layouts

	var body: some View {
		NavigationStack {
			VStack {
				DatePicker("SelectedDate",
						   selection: $selected.date,
						   in: ...Date.now,
						   displayedComponents: [.date])
				.datePickerStyle(.compact)
				.padding()
				.accessibilityIdentifier("DatePicker")
...
					Button {
						showAverageSheet = true
					} label: {
						Label("Average",
							  systemImage: "divide.circle.fill")
					}
					.accessibilityIdentifier("AverageButton")
				}

				ToolbarItem(placement: .primaryAction) {
					Button {
						showCountersSheet = true
					} label: {
						Label("Counters",
							  systemImage: "list.bullet.circle.fill")
					}
					.accessibilityIdentifier("CountersButton")
				}

				ToolbarItem(placement: .cancellationAction) {
					Button {
						dismiss()
					} label: {
						Image(systemName: "xmark.circle.fill")
					}
					.accessibilityIdentifier("CloseSettingsButton")
				}

				ToolbarItem(placement: .bottomBar) {
					Button("Today") {
						selected.date = .now.toDateWithoutTime ?? .now
					}
					.disabled(selected.date.isDateToday)
					.accessibilityIdentifier("TodayButton")
				}
			}
			.sheet(isPresented: $showAverageSheet) {
				AverageView(selected: selected,
							showAverageSheet: $showAverageSheet)
			}
...
