...
					Button(role: .destructive) {
						showResetConfirmationDialog = true
					} label: {
						Label("Reset",
							  systemImage: "trash.circle.fill")
					}
					.accessibilityIdentifier("ResetButton")
				}

				ToolbarItem(placement: .cancellationAction) {
					Button {
						showCountersSheet = false
					} label: {
						Image(systemName: "xmark.circle.fill")
					}
					.accessibilityIdentifier("CloseCountersButton")
				}
			}
			.confirmationDialog("DeleteConfirmationDialog",
								isPresented: $showDeleteConfirmationDialog,
								titleVisibility: .visible) {
				Button("Delete",
...
								sensoryFeedbackTrigger = true
							}
							self.counterDelete = nil
						}
					}
				}
				.accessibilityIdentifier("DeleteConfirmationDialogButton")
			}
			.confirmationDialog("ResetConfirmationDialog",
								isPresented: $showResetConfirmationDialog,
								titleVisibility: .visible) {
				Button("Reset",
					   role: .destructive) {
...
						}
					}
					selected.average = 7
					selected.date = .now.toDateWithoutTime ?? .now
					dismiss()
				}
				.accessibilityIdentifier("ResetConfirmationDialogButton")
			}
			.sensoryFeedback(sensoryFeedback,
							 trigger: sensoryFeedbackTrigger) { _, newValue in
				sensoryFeedbackTrigger = false
				return newValue == true
			}
...
				Label("Delete",
					  systemImage: "trash.circle.fill")
			} else {
				Image(systemName: "trash")
			}
		}
		.accessibilityIdentifier("DeleteButton")
	}

	private func ListItem(counter: Counter) -> some View {
		Button {
			guard let date = counter.date else {
				return
...
