...

	// MARK: - Layouts

	var body: some View {
		NavigationStack {
			VStack {
				DatePicker("SelectedDate",
						   selection: $viewModel.counterSelectedModel.selectedDate,
						   in: ...Date.now,
						   displayedComponents: [.date])
				.datePickerStyle(.compact)
				.padding()
				.accessibilityIdentifier("DatePicker")
...
						.chartScrollPosition(x: $viewModel.chartScrollPosition)
						.chartXVisibleDomain(length: viewModel.chartXVisibleDomainLength(counters: counters))
						.chartXSelection(value: $viewModel.selectedPointMarkDate)
						.chartXScale(range: .plotDimension(padding: 12))
						.chartYScale(range: .plotDimension(padding: 12))
						.foregroundStyle(.red)
						.accessibilityIdentifier("Chart")
						.onAppear {
							/// Update chart scroll position on appear
							Task {
								withAnimation {
									let date = viewModel.counterSelectedModel.selectedDate
									let dateMinusOne = Calendar.current.date(byAdding: DateComponents(day: -1),
...
